--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <packaging>jar</packaging>
 
   <name>DiMaWo</name>
-  <url>http://www.montefiore.ulg.ac.be/~dethier/dimawo/</url>
+  <url>https://github.com/gdethier/dimawo</url>
   <inceptionYear>2011</inceptionYear>
   <organization>
   	<name>DiMaWo Team</name>
@@ -71,8 +71,18 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.10</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.17</version>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>1.9.0</version>
     </dependency>
   </dependencies>
 </project>
